--- a/android/app/src/main/res/layout/activity_paypal.xml
+++ b/android/app/src/main/res/layout/activity_paypal.xml
@@ -14,13 +14,12 @@
     android:paddingTop="40dp">
 
     <ImageView
+        android:layout_marginTop="100dp"
         android:layout_width="wrap_content"
         android:layout_height="200dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="20dp"
         android:src="@drawable/paypal" />
-
-
 
     <android.support.v7.widget.AppCompatButton
         android:id="@+id/btn_paypal"
@@ -29,7 +28,7 @@
         android:layout_marginBottom="20dp"
         android:layout_marginTop="24dp"
         android:padding="12dp"
-        android:text="Paypal" />
+        android:text="Become VIP for 3 months" />
 
 </LinearLayout>
 </ScrollView>
