--- a/android/app/src/main/res/layout/fragment_yourself.xml
+++ b/android/app/src/main/res/layout/fragment_yourself.xml
@@ -408,6 +408,15 @@
                 android:padding="12dp"
                 android:text="Become Premium" />
 
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/btn_logout"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="5dp"
+                android:padding="12dp"
+                android:text="Logout" />
+
         </LinearLayout>
     </RelativeLayout>
 </ScrollView>
