#edit resetPassHTML, populator Message, Friend

--- a/server/src/main/resources/templates/mail/passwordResetEmail.html
+++ b/server/src/main/resources/templates/mail/passwordResetEmail.html
@@ -10,12 +10,11 @@
             Dear
         </p>
         <p th:text="#{email.reset.text1}">
-            For your NotEnd account a password reset was requested, please click on the URL below to reset it:
+            For your NotEnd account a password reset was requested, please use KEY below to reset it:
         </p>
         <p>
             
-            <a th:href="@{|${baseUrl}/#/reset/finish?key=${user.resetKey}|}"
-             th:text="@{|${baseUrl}/#/reset/finish?key=${user.resetKey}|}">Login link</a>
+            <span th:text="${user.resetKey}"></span>
             
         </p>
         <p>
