--- a/server/src/main/resources/templates/mail/activationEmail.html
+++ b/server/src/main/resources/templates/mail/activationEmail.html
@@ -14,8 +14,8 @@
         </p>
         <p>
             
-            <a th:href="@{|${baseUrl}/api/activate?key=${user.activationKey}|}"
-               th:text="@{|${baseUrl}/api/activate?key=${user.activationKey}|}">Activation Link</a>
+            <a th:href="@{|http://171.244.49.104:8080/#/activate?key=${user.activationKey}|}"
+                th:text="@{|http://171.244.49.104:8080/#/activate?key=${user.activationKey}|}">Activation Link</a>
             
         </p>
         <p>
