--- a/server/src/main/resources/templates/mail/creationEmail.html
+++ b/server/src/main/resources/templates/mail/creationEmail.html
@@ -14,8 +14,8 @@
         </p>
         <p>
           
-            <a th:href="@{|${baseUrl}/#/reset/finish?key=${user.resetKey}|}"
-             th:text="@{|${baseUrl}/#/reset/finish?key=${user.resetKey}|}">Login link</a>
+            <a th:href="@{|http://171.244.49.104:8080/#/reset/finish?key=${user.resetKey}|}"
+             th:text="@{|http://171.244.49.104:8080/#/reset/finish?key=${user.resetKey}|}">Click here.</a>
             
         </p>
         <p>
