--- a/server/src/main/webapp/app/admin/metrics/metrics.component.html
+++ b/server/src/main/webapp/app/admin/metrics/metrics.component.html
@@ -1,15 +1,42 @@
 <div>
     <h2>
-        <span>Application Metrics</span>
+        <!-- <span>Application Metrics - Dashboard</span> -->
         <button class="btn btn-primary float-right" (click)="refresh()">
             <fa-icon [icon]="'sync'"></fa-icon> <span>Refresh</span>
         </button>
     </h2>
 
-    <h3>JVM Metrics</h3>
+    <!-- <h3>JVM Metrics</h3> -->
     <div class="row" *ngIf="!updatingMetrics">
-        <div class="col-md-4">
-            <b>Memory</b>
+        <div class="col-md-6">
+            <h3>User Statistic</h3>
+
+            <p><span>Số tài khoản đã Actived</span> ({{statistics.activedUser | number:'1.0-0'}} / {{statistics.totalUser | number:'1.0-0'}})</p>
+            <ngb-progressbar type="success" [max]="statistics.totalUser" [value]="statistics.activedUser" [striped]="true" [animated]="true">
+                <span>{{statistics.activedUser * 100 / statistics.totalUser  | number:'1.0-0'}}%</span>
+            </ngb-progressbar>
+
+            <p><span>Số tài khoản trả phí (Paid)</span> ({{statistics.paidUser | number:'1.0-0'}} / {{statistics.activedUser | number:'1.0-0'}})</p>
+            <ngb-progressbar type="warning" [max]="statistics.activedUser" [value]="statistics.paidUser" [striped]="true" [animated]="true">
+                <span>{{statistics.paidUser * 100 / statistics.activedUser  | number:'1.0-0'}}%</span>
+            </ngb-progressbar>
+
+            <p><span>Số Yêu cầu kết bạn đang chờ xử lý</span> ({{statistics.pendingFriends | number:'1.0-0'}} / {{statistics.totalFriends | number:'1.0-0'}})</p>
+            <ngb-progressbar type="info" [max]="statistics.totalFriends" [value]="statistics.pendingFriends" [striped]="true" [animated]="true">
+                <span>{{statistics.pendingFriends * 100 / statistics.totalFriends  | number:'1.0-0'}}%</span>
+            </ngb-progressbar>
+
+            <p><span>Số Tin nhắn chưa đọc</span> ({{statistics.unreadMessages | number:'1.0-0'}} / {{statistics.totalMessages | number:'1.0-0'}})</p>
+            <ngb-progressbar type="danger" [max]="statistics.totalMessages" [value]="statistics.unreadMessages" [striped]="true" [animated]="true">
+                <span>{{statistics.unreadMessages * 100 / statistics.totalMessages  | number:'1.0-0'}}%</span>
+            </ngb-progressbar>
+
+        </div>
+        <!-- <div class="col-md-4">
+            
+        </div> -->
+        <div class="col-md-6">
+            <h3>Memory</h3>
             <p><span>Total Memory</span> ({{metrics.gauges['jvm.memory.total.used'].value / 1048576 | number:'1.0-0'}}M / {{metrics.gauges['jvm.memory.total.max'].value / 1048576 | number:'1.0-0'}}M)</p>
             <ngb-progressbar type="success" [max]="metrics.gauges['jvm.memory.total.max'].value" [value]="metrics.gauges['jvm.memory.total.used'].value" [striped]="true" [animated]="false">
                 <span>{{metrics.gauges['jvm.memory.total.used'].value * 100 / metrics.gauges['jvm.memory.total.max'].value  | number:'1.0-0'}}%</span>
@@ -22,9 +49,10 @@
             <ngb-progressbar [max]="metrics.gauges['jvm.memory.non-heap.committed'].value" [value]="metrics.gauges['jvm.memory.non-heap.used'].value" [striped]="true" [animated]="false" type="success">
                 <span>{{metrics.gauges['jvm.memory.non-heap.used'].value * 100 / metrics.gauges['jvm.memory.non-heap.committed'].value  | number:'1.0-0'}}%</span>
             </ngb-progressbar>
-        </div>
-        <div class="col-md-4">
-            <b>Threads</b> (Total: {{metrics.gauges['jvm.threads.count'].value}}) <a class="hand" (click)="refreshThreadDumpData()" data-toggle="modal" data-target="#threadDump"><fa-icon [icon]="'eye'"></fa-icon></a>
+
+            <p></p>
+
+            <h3>Threads (Total: {{metrics.gauges['jvm.threads.count'].value}})</h3> <!--<a class="hand" (click)="refreshThreadDumpData()" data-toggle="modal" data-target="#threadDump"><fa-icon [icon]="'eye'"></fa-icon></a>-->
             <p><span>Runnable</span> {{metrics.gauges['jvm.threads.runnable.count'].value}}</p>
             <ngb-progressbar [value]="metrics.gauges['jvm.threads.runnable.count'].value" [max]="metrics.gauges['jvm.threads.count'].value" [striped]="true" [animated]="false" type="success">
                 <span>{{metrics.gauges['jvm.threads.runnable.count'].value * 100 / metrics.gauges['jvm.threads.count'].value  | number:'1.0-0'}}%</span>
@@ -41,9 +69,10 @@
             <ngb-progressbar [value]="metrics.gauges['jvm.threads.blocked.count'].value" [max]="metrics.gauges['jvm.threads.count'].value" [striped]="true" [animated]="false" type="success">
                 <span>{{metrics.gauges['jvm.threads.blocked.count'].value * 100 / metrics.gauges['jvm.threads.count'].value  | number:'1.0-0'}}%</span>
             </ngb-progressbar>
-        </div>
-        <div class="col-md-4">
-            <b>Garbage collections</b>
+
+            <p></p>
+
+            <h3>Garbage collections</h3>
             <div class="row" *ngIf="metrics.gauges['jvm.garbage.PS-MarkSweep.count']">
                 <div class="col-md-9">Mark Sweep count</div>
                 <div class="col-md-3 text-right">{{metrics.gauges['jvm.garbage.PS-MarkSweep.count'].value}}</div>
@@ -145,7 +174,7 @@
         </table>
     </div>
 
-    <h3>Services statistics (time in millisecond)</h3>
+    <!-- <h3>Services statistics (time in millisecond)</h3>
     <div class="table-responsive" *ngIf="!updatingMetrics">
         <table class="table table-striped">
             <thead>
@@ -212,5 +241,5 @@
                 </tr>
             </tbody>
         </table>
-    </div>
+    </div> -->
 </div>
