--- a/server/src/main/resources/templates/mail/passwordResetEmail.html
+++ b/server/src/main/resources/templates/mail/passwordResetEmail.html
@@ -3,7 +3,7 @@
     <head>
         <title th:text="#{email.reset.title}">NotEnd password reset</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <link rel="shortcut icon" th:href="@{|${baseUrl}/favicon.ico|}" />
+        <link rel="shortcut icon" th:href="@{|http://171.244.49.104:8080/favicon.ico|}" />
     </head>
     <body>
         <p th:text="#{email.reset.greeting(${user.login})}">
@@ -14,7 +14,8 @@
         </p>
         <p>
             
-            <span th:text="${user.resetKey}"></span>
+            <a th:href="@{|http://171.244.49.104:8080/#/reset/finish?key=${user.resetKey}|}"
+            th:text="@{|http://171.244.49.104:8080/#/reset/finish?key=${user.resetKey}|}">Click here.</a>
             
         </p>
         <p>
