--- a/android/app/src/main/res/layout/fragment_yourself.xml
+++ b/android/app/src/main/res/layout/fragment_yourself.xml
@@ -409,6 +409,15 @@
                 android:text="Become Premium" />
 
             <android.support.v7.widget.AppCompatButton
+                android:id="@+id/btn_history"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="5dp"
+                android:padding="12dp"
+                android:text="Transaction Histories" />
+
+            <android.support.v7.widget.AppCompatButton
                 android:id="@+id/btn_logout"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
