--- a/android/app/src/main/res/layout/fragment_list.xml
+++ b/android/app/src/main/res/layout/fragment_list.xml
@@ -1,8 +1,23 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".activity.Content">
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/rvUser"></android.support.v7.widget.RecyclerView>
-
+        android:id="@+id/rvUser"
+        android:layout_margin="2dp"
+        android:layout_below="@+id/progressBar"
+        android:layout_alignParentTop="true"
+        >
+    </android.support.v7.widget.RecyclerView>
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:background="@color/red"
+        android:visibility="gone"/>
 </RelativeLayout>
