--- a/android/app/src/main/res/layout/new_items.xml
+++ b/android/app/src/main/res/layout/new_items.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp">
+    android:layout_margin="2dp">
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
@@ -15,11 +15,10 @@
         app:contentPadding="5dp"
         app:cardBackgroundColor="@color/cardview_shadow_start_color"
         >
-
         <RelativeLayout
             android:id="@+id/relativeLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:orientation="vertical"
             android:background="#fff">
@@ -27,9 +26,11 @@
             <de.hdodenhof.circleimageview.CircleImageView
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/imAvatar"
-                android:layout_width="match_parent"
+                android:layout_width="250dp"
                 android:layout_height="200dp"
-                app:civ_border_width="4dp"
+                android:paddingRight="5dp"
+                android:paddingLeft="5dp"
+                app:civ_border_width="3dp"
                 app:civ_border_color="#d4d3d3"
                 android:src="@drawable/im1" />
 
@@ -52,7 +53,8 @@
                 android:layout_centerHorizontal="true"
                 android:text="age,job,address"
                 android:textColor="@color/black"
-                android:textSize="20sp"
+                android:textSize="15sp"
+                android:layout_marginTop="10dp"
                 android:textStyle="italic" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
