--- a/android/app/src/main/res/layout/friend_detail_user.xml
+++ b/android/app/src/main/res/layout/friend_detail_user.xml
@@ -31,6 +31,20 @@
                     android:layout_height="300dp"
                     android:scaleType="centerCrop"
                     android:src="@drawable/img3" />
+
+                <!--<Button-->
+                <!--android:id="@+id/btEditImage"-->
+                <!--android:layout_width="fill_parent"-->
+                <!--android:layout_height="50dp"-->
+                <!--android:layout_alignParentBottom="true"-->
+                <!--android:layout_marginBottom="16dp"-->
+                <!--android:background="@drawable/button_background"-->
+                <!--android:drawableLeft="@drawable/ic_photo_camera"-->
+                <!--android:drawablePadding="30dp"-->
+                <!--android:gravity="left|center_vertical"-->
+                <!--android:paddingLeft="100dp"-->
+                <!--android:text="changen Image"-->
+                <!--android:textColor="#fff" />-->
             </RelativeLayout>
 
             <LinearLayout
@@ -75,7 +89,7 @@
                             android:textColor="#000000" />
 
                         <TextView
-                            android:id="@+id/tvMyName"
+                            android:id="@+id/myName"
                             android:layout_weight="1"
                             android:background="#fff"
                             android:gravity="left"
@@ -97,11 +111,11 @@
                             android:background="#fff"
                             android:gravity="left"
                             android:padding="5dip"
-                            android:text="Age"
+                            android:text="Birthday"
                             android:textColor="#000000" />
 
                         <TextView
-                            android:id="@+id/tvMyAge"
+                            android:id="@+id/myAge"
                             android:layout_weight="1"
                             android:background="#fff"
                             android:gravity="left"
@@ -127,12 +141,12 @@
                             android:textColor="#000000" />
 
                         <TextView
-                            android:id="@+id/tvMyHeight"
+                            android:id="@+id/myHeight"
                             android:layout_weight="1"
                             android:background="#fff"
                             android:gravity="left"
                             android:padding="5dip"
-                            android:text="---"
+                            android:text="170"
                             android:textColor="#8470ff" />
                     </TableRow>
                     //row4
@@ -153,7 +167,7 @@
                             android:textColor="#000000" />
 
                         <TextView
-                            android:id="@+id/tvMyAddress"
+                            android:id="@+id/myAddress"
                             android:layout_weight="1"
                             android:background="#fff"
                             android:gravity="left"
@@ -178,7 +192,7 @@
                             android:textColor="#000000" />
 
                         <TextView
-                            android:id="@+id/tvMyCountry"
+                            android:id="@+id/myCountry"
                             android:layout_weight="1"
                             android:background="#fff"
                             android:gravity="left"
@@ -196,7 +210,7 @@
                     android:clickable="true"
                     android:elevation="4dp"
                     android:padding="5dp"
-                    android:text="education and occupation"
+                    android:text="Job and Religiion"
                     android:textColor="@color/black"
                     android:textSize="25sp" />
 
@@ -207,30 +221,30 @@
                     android:shrinkColumns="*"
                     android:stretchColumns="*">
 
-                    <TableRow
-                        android:id="@+id/tableRow21"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="#fff"
-                        android:padding="5dip">
+                    <!--<TableRow-->
+                    <!--android:id="@+id/tableRow21"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:background="#fff"-->
+                    <!--android:padding="5dip">-->
 
-                        <TextView
-                            android:layout_weight="1"
-                            android:background="#fff"
-                            android:gravity="left"
-                            android:padding="5dip"
-                            android:text="Education"
-                            android:textColor="#000000" />
+                    <!--<TextView-->
+                    <!--android:layout_weight="1"-->
+                    <!--android:background="#fff"-->
+                    <!--android:gravity="left"-->
+                    <!--android:padding="5dip"-->
+                    <!--android:text="Education"-->
+                    <!--android:textColor="#000000" />-->
 
-                        <TextView
-                            android:id="@+id/myEdu"
-                            android:layout_weight="1"
-                            android:background="#fff"
-                            android:gravity="left"
-                            android:padding="5dip"
-                            android:text="Ðại học"
-                            android:textColor="#8470ff" />
-                    </TableRow>
+                    <!--<TextView-->
+                    <!--android:id="@+id/myEdu"-->
+                    <!--android:layout_weight="1"-->
+                    <!--android:background="#fff"-->
+                    <!--android:gravity="left"-->
+                    <!--android:padding="5dip"-->
+                    <!--android:text="Ðại học"-->
+                    <!--android:textColor="#8470ff" />-->
+                    <!--</TableRow>-->
 
                     <TableRow
                         android:id="@+id/tableRow22"
@@ -244,7 +258,7 @@
                             android:background="#fff"
                             android:gravity="left"
                             android:padding="5dip"
-                            android:text="Job"
+                            android:text="Working At"
                             android:textColor="#000000" />
 
                         <TextView
@@ -253,7 +267,7 @@
                             android:background="#fff"
                             android:gravity="left"
                             android:padding="5dip"
-                            android:text="_"
+                            android:text=" "
                             android:textColor="#8470ff" />
                     </TableRow>
 
@@ -269,22 +283,47 @@
                             android:background="#fff"
                             android:gravity="left"
                             android:padding="5dip"
-                            android:text="Salary"
+                            android:text="Religion"
                             android:textColor="#000000" />
 
                         <TextView
-                            android:id="@+id/mySalary"
+                            android:id="@+id/myReligion"
                             android:layout_weight="1"
                             android:background="#fff"
                             android:gravity="left"
                             android:padding="5dip"
-                            android:text="-"
+                            android:text=" "
                             android:textColor="#8470ff" />
                     </TableRow>
-                </TableLayout>
 
+                    <TableRow
+                        android:id="@+id/tableRow24"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="#fff"
+                        android:padding="5dip">
+
+                        <TextView
+                            android:layout_weight="1"
+                            android:background="#fff"
+                            android:gravity="left"
+                            android:padding="5dip"
+                            android:text="Mother Tongue"
+                            android:textColor="#000000" />
+
+                        <TextView
+                            android:id="@+id/myLang"
+                            android:layout_weight="1"
+                            android:background="#fff"
+                            android:gravity="left"
+                            android:padding="5dip"
+                            android:text=" "
+                            android:textColor="#8470ff" />
+                    </TableRow>
+
+                </TableLayout>
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:background="@color/button_pressed"
@@ -294,7 +333,6 @@
                     android:text="Family"
                     android:textColor="@color/black"
                     android:textSize="25sp" />
-
                 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                     android:id="@+id/table3"
                     android:layout_width="fill_parent"
@@ -310,20 +348,21 @@
                         android:padding="5dip">
 
                         <TextView
+                            android:layout_width="84dp"
                             android:layout_weight="1"
                             android:background="#fff"
                             android:gravity="left"
                             android:padding="5dip"
-                            android:text="Have Children"
+                            android:text="Hobbies"
                             android:textColor="#000000" />
 
                         <TextView
-                            android:id="@+id/myHaveChildren"
+                            android:id="@+id/myHobbies"
                             android:layout_weight="1"
                             android:background="#fff"
                             android:gravity="left"
                             android:padding="5dip"
-                            android:text="_"
+                            android:text=" "
                             android:textColor="#8470ff" />
                     </TableRow>
 
@@ -339,15 +378,16 @@
                             android:background="#fff"
                             android:gravity="left"
                             android:padding="5dip"
-                            android:text="Desire to have children"
+                            android:text="Family Status"
                             android:textColor="#000000" />
+
                         <TextView
-                            android:id="@+id/myDesireChildren"
+                            android:id="@+id/myFamily"
                             android:layout_weight="1"
                             android:background="#fff"
                             android:gravity="left"
                             android:padding="5dip"
-                            android:text="_"
+                            android:text=" "
                             android:textColor="#8470ff" />
                     </TableRow>
 
@@ -357,24 +397,41 @@
                         android:layout_height="wrap_content"
                         android:background="#fff"
                         android:padding="5dip">
+
                         <TextView
+                            android:layout_width="5dp"
                             android:layout_weight="1"
                             android:background="#fff"
                             android:gravity="left"
                             android:padding="5dip"
                             android:text="Status of life"
                             android:textColor="#000000" />
+
                         <TextView
                             android:id="@+id/myStatusLife"
                             android:layout_weight="1"
                             android:background="#fff"
                             android:gravity="left"
                             android:padding="5dip"
-                            android:text="-"
+                            android:text=" "
                             android:textColor="#8470ff" />
                     </TableRow>
                 </TableLayout>
             </LinearLayout>
         </RelativeLayout>
     </ScrollView>
+
+    <RelativeLayout
+        android:id="@+id/footer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:gravity="center">
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_delFriend"
+            android:text="Xóa bạn" />
+    </RelativeLayout>
+
 </RelativeLayout>
